<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:id="@+id/score_keeper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/team_a_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:entries="@array/nfl_teams_array"
                android:gravity="center" />

            <!-- original team a image
            <ImageView
                android:id="@+id/team_a_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/nfl_logo" />
                -->

            <TextView
                android:id="@+id/team_a_score"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/scoreboard_shape"
                android:fontFamily="@font/scoreboard"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingBottom="@dimen/elevation"
                android:paddingTop="@dimen/elevation"
                android:text="@string/initial_score"
                android:textColor="@color/scoreboard_red"
                android:textSize="@dimen/scoreboard_text" />

            <Button
                android:id="@+id/team_a_td"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addSixForTeamA"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_td"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_a_xp"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addOneForTeamA"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_xp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_a_tpc"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addTwoForTeamA"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_tpc"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_a_fg"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addThreeForTeamA"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_fg"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_a_saf"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addTwoForTeamA"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_saf"
                android:textColor="@color/white" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginTop="@dimen/xsmall_margin"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/team_b_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:entries="@array/nfl_teams_array"
                android:gravity="center" />

            <!-- original team b image
            <ImageView
                android:id="@+id/team_b_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/nfl_logo" />
                -->

            <TextView
                android:id="@+id/team_b_score"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/scoreboard_shape"
                android:fontFamily="@font/scoreboard"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingBottom="@dimen/elevation"
                android:paddingTop="@dimen/elevation"
                android:text="@string/initial_score"
                android:textColor="@color/scoreboard_red"
                android:textSize="@dimen/scoreboard_text" />

            <Button
                android:id="@+id/team_b_td"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addSixForTeamB"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_td"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_b_xp"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addOneForTeamB"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_xp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_b_tpc"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addTwoForTeamB"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_tpc"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_b_fg"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addThreeForTeamB"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_fg"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/team_b_saf"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:layout_marginEnd="@dimen/large_margin"
                android:layout_marginLeft="@dimen/large_margin"
                android:layout_marginRight="@dimen/large_margin"
                android:layout_marginStart="@dimen/large_margin"
                android:background="@drawable/nfl_shape"
                android:elevation="@dimen/elevation"
                android:onClick="addTwoForTeamB"
                android:paddingBottom="@dimen/small_margin"
                android:paddingTop="@dimen/small_margin"
                android:text="@string/points_saf"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/teamLogos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_keeper"
        android:background="@drawable/grass_field"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/team_a_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/nfl_logo" />

        <!-- original nfl_grass_logo image
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_gravity="center_vertical"
            android:src="@drawable/nfl_grass_logo"
            android:adjustViewBounds="true"/>-->

        <Button
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#8A5D4D"
            android:elevation="@dimen/elevation"
            android:onClick="resetScore"
            android:padding="@dimen/small_margin"
            android:text="reset"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/team_b_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/large_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/nfl_logo" />

    </LinearLayout>

</RelativeLayout>
